html and js edited

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
-		href="https://fonts.googleapis.com/css2?family=Heebo&family=Lato:wght@300;400;700&family=Oxanium:wght@200..800&family=Work+Sans:wght@100..900&display=swap&_v=20251004162600"
+		href="https://fonts.googleapis.com/css2?family=Heebo&family=Lato:wght@300;400;700&family=Oxanium:wght@200..800&family=Work+Sans:wght@100..900&display=swap&_v=20251023135004"
 		rel="stylesheet">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20251004162600" />
-	<link rel="stylesheet" href="css/style.min.css?_v=20251004162600">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20251023135004" />
+	<link rel="stylesheet" href="css/style.min.css?_v=20251023135004">
 </head>
 
 <body>
@@ -360,7 +360,8 @@
 											<div class="nft-card__title">
 												Monkey ape
 											</div>
-											<a href="index.html" class="nft-card__author-icon" aria-label="go to user profile">
+											<a href="index.html" class="nft-card__author-icon"
+												aria-label="go to user profile">
 												<picture><source srcset="img/User-Profile-icon.webp" type="image/webp"><img src="img/User-Profile-icon.jpg" alt="author icon"></picture>
 											</a>
 											<div class="nft-card__author-nickname">
@@ -398,7 +399,8 @@
 											<div class="nft-card__title">
 												Moonfall
 											</div>
-											<a href="index.html" class="nft-card__author-icon" aria-label="go to user profile">
+											<a href="index.html" class="nft-card__author-icon"
+												aria-label="go to user profile">
 												<picture><source srcset="img/User-Profile-icon.webp" type="image/webp"><img src="img/User-Profile-icon.jpg" alt="author icon"></picture>
 											</a>
 											<div class="nft-card__author-nickname">
@@ -433,7 +435,8 @@
 											<div class="nft-card__title">
 												Wired Human
 											</div>
-											<a href="index.html" class="nft-card__author-icon" aria-label="go to user profile">
+											<a href="index.html" class="nft-card__author-icon"
+												aria-label="go to user profile">
 												<picture><source srcset="img/User-Profile-icon.webp" type="image/webp"><img src="img/User-Profile-icon.jpg" alt="author icon"></picture>
 											</a>
 											<div class="nft-card__author-nickname">
@@ -471,7 +474,8 @@
 											<div class="nft-card__title">
 												Racer-To-Go
 											</div>
-											<a href="index.html" class="nft-card__author-icon" aria-label="go to user profile">
+											<a href="index.html" class="nft-card__author-icon"
+												aria-label="go to user profile">
 												<picture><source srcset="img/User-Profile-icon.webp" type="image/webp"><img src="img/User-Profile-icon.jpg" alt="author icon"></picture>
 											</a>
 											<div class="nft-card__author-nickname">
@@ -529,7 +533,8 @@
 											<div class="nft-card__title">
 												Monkey ape
 											</div>
-											<a href="index.html" class="nft-card__author-icon" aria-label="go to user profile">
+											<a href="index.html" class="nft-card__author-icon"
+												aria-label="go to user profile">
 												<picture><source srcset="img/User-Profile-icon.webp" type="image/webp"><img src="img/User-Profile-icon.jpg" alt="author icon"></picture>
 											</a>
 											<div class="nft-card__author-nickname">
@@ -567,7 +572,8 @@
 											<div class="nft-card__title">
 												Moonfall
 											</div>
-											<a href="index.html" class="nft-card__author-icon" aria-label="go to user profile">
+											<a href="index.html" class="nft-card__author-icon"
+												aria-label="go to user profile">
 												<picture><source srcset="img/User-Profile-icon.webp" type="image/webp"><img src="img/User-Profile-icon.jpg" alt="author icon"></picture>
 											</a>
 											<div class="nft-card__author-nickname">
@@ -602,7 +608,8 @@
 											<div class="nft-card__title">
 												Wired Human
 											</div>
-											<a href="index.html" class="nft-card__author-icon" aria-label="go to user profile">
+											<a href="index.html" class="nft-card__author-icon"
+												aria-label="go to user profile">
 												<picture><source srcset="img/User-Profile-icon.webp" type="image/webp"><img src="img/User-Profile-icon.jpg" alt="author icon"></picture>
 											</a>
 											<div class="nft-card__author-nickname">
@@ -640,7 +647,8 @@
 											<div class="nft-card__title">
 												Racer-To-Go
 											</div>
-											<a href="index.html" class="nft-card__author-icon" aria-label="go to user profile">
+											<a href="index.html" class="nft-card__author-icon"
+												aria-label="go to user profile">
 												<picture><source srcset="img/User-Profile-icon.webp" type="image/webp"><img src="img/User-Profile-icon.jpg" alt="author icon"></picture>
 											</a>
 											<div class="nft-card__author-nickname">
@@ -814,9 +822,9 @@
 				</div>
 				<div class="ready__container container">
 					<div class="ready__content">
-						<div class="ready__title title-smaller">
+						<h2 class="ready__title title-smaller">
 							Ready for Next NFT Drop?
-						</div>
+						</h2>
 						<form action="index.html" class="ready__form">
 							<div class="ready__blurred-spot blurred-spot blurred-spot--small">
 								<img src="img/spot-purple-small.svg" alt="" aria-hidden="true">
@@ -827,7 +835,7 @@
 									name="email">
 							</div>
 							<button class="ready__btn" type="submit" aria-label="Subscribe to updates about NFT drops">
-								<img src="img/Arrow-right.svg" alt="" aria-hidden="true" focusable="false">
+								<img src="img/Arrow-right.svg" alt="" aria-hidden="true">
 							</button>
 						</form>
 					</div>
@@ -944,9 +952,9 @@
 			</svg>
 		</button>
 	</div>
-	<script src="libs/inert.js?_v=20251004162600"></script>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20251004162600"></script>
-	<script src="js/app.min.js?_v=20251004162600"></script>
+	<script src="libs/inert.js?_v=20251023135004"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20251023135004"></script>
+	<script src="js/app.min.js?_v=20251023135004"></script>
 </body>
 
 </html>
