--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -7,10 +7,10 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
-		href="https://fonts.googleapis.com/css2?family=Heebo&family=Lato:wght@300;400;700&family=Oxanium:wght@200..800&family=Work+Sans:wght@100..900&display=swap&_v=20251004162600"
+		href="https://fonts.googleapis.com/css2?family=Heebo&family=Lato:wght@300;400;700&family=Oxanium:wght@200..800&family=Work+Sans:wght@100..900&display=swap&_v=20251023135004"
 		rel="stylesheet">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20251004162600" />
-	<link rel="stylesheet" href="css/style.min.css?_v=20251004162600">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20251023135004" />
+	<link rel="stylesheet" href="css/style.min.css?_v=20251023135004">
 </head>
 
 <body>
@@ -221,9 +221,9 @@
 				</div>
 				<div class="ready__container container">
 					<div class="ready__content">
-						<div class="ready__title title-smaller">
+						<h2 class="ready__title title-smaller">
 							Ready for Next NFT Drop?
-						</div>
+						</h2>
 						<form action="#" class="ready__form">
 							<div class="ready__blurred-spot blurred-spot blurred-spot--small">
 								<img src="img/spot-purple-small.svg" alt="" aria-hidden="true">
@@ -234,7 +234,7 @@
 									name="email">
 							</div>
 							<button class="ready__btn" type="submit" aria-label="Subscribe to updates about NFT drops">
-								<img src="img/Arrow-right.svg" alt="" aria-hidden="true" focusable="false">
+								<img src="img/Arrow-right.svg" alt="" aria-hidden="true">
 							</button>
 						</form>
 					</div>
@@ -351,8 +351,8 @@
 			</svg>
 		</button>
 	</div>
-	<script src="libs/inert.js?_v=20251004162600"></script>
-	<script src="js/app.min.js?_v=20251004162600"></script>
+	<script src="libs/inert.js?_v=20251023135004"></script>
+	<script src="js/app.min.js?_v=20251023135004"></script>
 </body>
 
 </html>
