--- a/user-profile.html
+++ b/user-profile.html
@@ -7,10 +7,10 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
-		href="https://fonts.googleapis.com/css2?family=Heebo&family=Lato:wght@300;400;700&family=Oxanium:wght@200..800&family=Work+Sans:wght@100..900&display=swap&_v=20251004162600"
+		href="https://fonts.googleapis.com/css2?family=Heebo&family=Lato:wght@300;400;700&family=Oxanium:wght@200..800&family=Work+Sans:wght@100..900&display=swap&_v=20251023135004"
 		rel="stylesheet">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20251004162600" />
-	<link rel="stylesheet" href="css/style.min.css?_v=20251004162600">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20251023135004" />
+	<link rel="stylesheet" href="css/style.min.css?_v=20251023135004">
 </head>
 
 <body>
@@ -77,8 +77,10 @@
 								</div>
 								<div class="user-profile__user-avatar-wrapper"
 									data-da="user-profile__header,599,last,max">
-									<div class="user-profile__user-avatar focusable" id="avatarUpload" tabindex="0" aria-label="change user avatar">
-										<picture><source srcset="img/User-Profile-icon.webp" type="image/webp"><img src="img/User-Profile-icon.jpg" alt="user avatar" id="avatarPreview" loading="lazy"></picture>
+									<div class="user-profile__user-avatar focusable" id="avatarUpload" tabindex="0"
+										aria-label="change user avatar">
+										<img src="img/User-Profile-icon.jpg" alt="user avatar" id="avatarPreview"
+											loading="lazy">
 										<label class="user-profile__avatar-upload">
 											<input type="file" id="avatarInput" accept="image/*" hidden>
 											<svg width="31" height="23" viewBox="0 0 31 23" fill="none"
@@ -90,7 +92,8 @@
 										</label>
 									</div>
 								</div>
-								<label class="user-profile__cover-upload focusable" id="coverUpload" tabindex="0" aria-label="change cover image">
+								<label class="user-profile__cover-upload focusable" id="coverUpload" tabindex="0"
+									aria-label="change cover image">
 									<input type="file" id="coverInput" accept="image/*" hidden>
 									<svg width="31" height="23" viewBox="0 0 31 23" fill="none"
 										xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
@@ -263,8 +266,8 @@
 			</svg>
 		</button>
 	</div>
-	<script src="libs/inert.js?_v=20251004162600"></script>
-	<script src="js/app.min.js?_v=20251004162600"></script>
+	<script src="libs/inert.js?_v=20251023135004"></script>
+	<script src="js/app.min.js?_v=20251023135004"></script>
 </body>
 
 </html>
