--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
-		href="https://fonts.googleapis.com/css2?family=Heebo&family=Lato:wght@300;400;700&family=Oxanium:wght@200..800&family=Work+Sans:wght@100..900&display=swap&_v=20251023135004"
+		href="https://fonts.googleapis.com/css2?family=Heebo&family=Lato:wght@300;400;700&family=Oxanium:wght@200..800&family=Work+Sans:wght@100..900&display=swap&_v=20251027180755"
 		rel="stylesheet">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20251023135004" />
-	<link rel="stylesheet" href="css/style.min.css?_v=20251023135004">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20251027180755" />
+	<link rel="stylesheet" href="css/style.min.css?_v=20251027180755">
 </head>
 
 <body>
@@ -65,7 +65,7 @@
 					<picture><source srcset="img/Milky-Way-image.webp" type="image/webp"><img src="img/Milky-Way-image.png" alt="" aria-hidden="true"></picture>
 				</div>
 				<div class="hero__container container">
-					<div class="hero__content header-height-offset-top">
+					<div class="hero__content header-height-offset-top header-height-offset-bottom">
 						<div class="hero__left-side">
 							<h1 class="hero__title">
 								EXPLORE, CREATE AND SELL YOUR NFT’S ON SHIHAMI
@@ -952,9 +952,9 @@
 			</svg>
 		</button>
 	</div>
-	<script src="libs/inert.js?_v=20251023135004"></script>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20251023135004"></script>
-	<script src="js/app.min.js?_v=20251023135004"></script>
+	<script src="libs/inert.js?_v=20251027180755"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20251027180755"></script>
+	<script src="js/app.min.js?_v=20251027180755"></script>
 </body>
 
 </html>
