--- a/nft-creation.html
+++ b/nft-creation.html
@@ -7,10 +7,10 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
-		href="https://fonts.googleapis.com/css2?family=Heebo&family=Lato:wght@300;400;700&family=Oxanium:wght@200..800&family=Work+Sans:wght@100..900&display=swap&_v=20251023135004"
+		href="https://fonts.googleapis.com/css2?family=Heebo&family=Lato:wght@300;400;700&family=Oxanium:wght@200..800&family=Work+Sans:wght@100..900&display=swap&_v=20251027180755"
 		rel="stylesheet">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20251023135004" />
-	<link rel="stylesheet" href="css/style.min.css?_v=20251023135004">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20251027180755" />
+	<link rel="stylesheet" href="css/style.min.css?_v=20251027180755">
 </head>
 
 <body>
@@ -66,11 +66,11 @@
 			<section class="nft-creation">
 				<div class="nft-creation__container container">
 					<div class="nft-creation__content">
-						<div class="nft-creation__header">
+						<div class="nft-creation__header header-height-offset-top header-height-offset-bottom">
 							<div class="nft-creation__bg-image ibg">
 								<picture><source srcset="img/bg-img.webp" type="image/webp"><img src="img/bg-img.png" alt="" aria-hidden="true"></picture>
 							</div>
-							<h1 class="nft-creation__title title header-height-offset-top">
+							<h1 class="nft-creation__title title">
 								create your own masterpiece
 							</h1>
 							<div class="nft-creation__desc text">
@@ -316,8 +316,8 @@
 			</svg>
 		</button>
 	</div>
-	<script src="libs/inert.js?_v=20251023135004"></script>
-	<script src="js/app.min.js?_v=20251023135004"></script>
+	<script src="libs/inert.js?_v=20251027180755"></script>
+	<script src="js/app.min.js?_v=20251027180755"></script>
 </body>
 
 </html>
