--- a/nft-creation.html
+++ b/nft-creation.html
@@ -7,10 +7,10 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
-		href="https://fonts.googleapis.com/css2?family=Heebo&family=Lato:wght@300;400;700&family=Oxanium:wght@200..800&family=Work+Sans:wght@100..900&display=swap&_v=20251027180755"
+		href="https://fonts.googleapis.com/css2?family=Heebo&family=Lato:wght@300;400;700&family=Oxanium:wght@200..800&family=Work+Sans:wght@100..900&display=swap&_v=20251106174919"
 		rel="stylesheet">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20251027180755" />
-	<link rel="stylesheet" href="css/style.min.css?_v=20251027180755">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20251106174919" />
+	<link rel="stylesheet" href="css/style.min.css?_v=20251106174919">
 </head>
 
 <body>
@@ -120,7 +120,7 @@
 								<div class="form__group">
 									<label class="form__label" for="collection">Collection</label>
 									<div class="form__select form-select">
-										<button class="form-select__button" aria-haspopup="listbox"
+										<button class="form-select__button" type="button" aria-haspopup="listbox"
 											aria-expanded="false">
 											Select Collection
 										</button>
@@ -149,7 +149,7 @@
 								<div class="form__group">
 									<label class="form__label" for="blockchain">Blockchain</label>
 									<div class="form__select form-select">
-										<button class="form-select__button" aria-haspopup="listbox"
+										<button class="form-select__button" type="button" aria-haspopup="listbox"
 											aria-expanded="false" aria-label="chose blockchain">
 										</button>
 										<ul class="form-select__list" role="listbox">
@@ -174,7 +174,7 @@
 								</div>
 							</div>
 							<button class="form__btn btn btn--light" type="submit">
-								<span>Update Profile</span>
+								<span>Create</span>
 							</button>
 						</form>
 					</div>
@@ -316,8 +316,8 @@
 			</svg>
 		</button>
 	</div>
-	<script src="libs/inert.js?_v=20251027180755"></script>
-	<script src="js/app.min.js?_v=20251027180755"></script>
+	<script src="libs/inert.js?_v=20251106174919"></script>
+	<script src="js/app.min.js?_v=20251106174919"></script>
 </body>
 
 </html>
